--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,9 +1,11 @@
 <nav>
-  <a href="/">Home</a>
-  <a href="/menu">Full Menu</a>
+  <a href="/"><%= companyName %></a>
+  <a href="/history">History</a>
   <!-- new links below-->
-  <a href="/menu/mains">Mains</a>
-  <a href="/menu/desserts">Desserts</a>
-  <a href="/menu/sides">Sides</a>
+  <a href="/work">Work</a>
+  <a href="/products">Products</a>
+  <a href="/staff">Staff</a>
+  <a href="/contact">Contact Us</a>
+  <a href="/links">Links</a>
 </nav>
 
