products initial draft

--- a/views/products.ejs
+++ b/views/products.ejs
@@ -1,4 +1,21 @@
 <%- include(`./partials/htmlhead`) %>
 <%- include(`./partials/nav`)%>
 
+<h1>Products</h1>
+<ul>
+    <% products.forEach(product => { %>
+        <li>
+            <h3><%= product.name %></h3>
+            <div>
+                <p><%= product.price %></p>
+                <p><%= product.rating %>🩸</p>
+            </div>
+            <p><%= product.description %></p>
+            <p><%= product.application %></p>
+        </li>
+    <% }) %>
+</ul>
+
+
+
 <%- include(`./partials/footer`) %>
