--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,4 +1,20 @@
 <%- include(`./partials/htmlhead`) %>
 <%- include(`./partials/nav`)%>
 
+<h1>Contact Us</h1>
+<form> 
+    <% form.fields.forEach(field => { %>
+        <label for="<%= field %>"><%= field %></label>
+        <% if(field === `name` || field === `subject`) {%>
+            <input type="text" id="<%= field %>"/>
+        <% } else if(field === `email`) { %>
+            <input type="email" id="<%= field %>"/>
+        <% } else { %>
+            <textarea id="<%= field %>"></textarea>
+        <% } %>
+    <% }) %>
+    <button>Submit</button>
+</form>
+<a href="<%= map %>">Find us on Google Maps</a>
+
 <%- include(`./partials/footer`) %>
