links initial draft

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -13,7 +13,7 @@
             <textarea id="<%= field %>"></textarea>
         <% } %>
     <% }) %>
-    <button>Submit</button>
+    <button><%= form.submitText %></button>
 </form>
 <a href="<%= map %>">Find us on Google Maps</a>
 
