--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,11 +1,15 @@
 <nav>
-  <a href="/"><%= companyName %></a>
-  <a href="/history">History</a>
-  <!-- new links below-->
-  <a href="/work">Work</a>
-  <a href="/products">Products</a>
-  <a href="/staff">Staff</a>
-  <a href="/contact">Contact Us</a>
-  <a href="/links">Links</a>
+  <div id="company-name">
+    <a href="/"><%= companyName %></a>
+  </div>
+  <div>
+    <a href="/history">History</a>
+    <!-- new links below-->
+    <a href="/work">Work</a>
+    <a href="/products">Products</a>
+    <a href="/staff">Staff</a>
+    <a href="/contact">Contact Us</a>
+    <a href="/links">Links</a>
+</div>
 </nav>
 
